# dbgwas

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog  LICENSE  README.md  THIRDPARTIES  TODO  install.sh
blastdb/: DBGWAS_merged_ResDB.fasta.nhr  DBGWAS_merged_ResDB.fasta.nin  DBGWAS_merged_ResDB.fasta.nsq  arganot.nhr  arganot.nin  arganot.nsq
boostSuperBuild/: SuperBuild.cmake
bugwas_scripts/: DBGWAS.R  build_bmx_data.R  cdbg_all_plots.R  cdbg_lin_loc.R  cdbg_ridge_regression.R
containers/docker/: Dockerfile  README.md  install.sh
containers/docker_dev/: Dockerfile  README.md  start_dbgwas_dev_env.sh  start_dbgwas_dev_env_KEEP_CONTAINER.sh  start_dbgwas_dev_env_Linux.sh  start_dbgwas_dev_env_Mac_or_Windows.sh
csjs/: comp_2.html  comp_5.html  cytoscape_template.html
csjs/lib/css/: style.css
csjs/lib/js/: componentJS.js  functions.js  helpers.js  indexJS.js
csjs/lib/resources/: nopreview_source.pptx
gemma/: gemma.0.93b
html_templates/: index_table_template.html  index_template.html
phantomjs/: render_graph.js
portable_binary_builder/: build_portable_dbgwas.sh  build_portable_dbgwas_core.sh
precompiled_binaries/: DBGWAS-0.0.1-Linux.tar.gz.REMOVED.git-id  DBGWAS-0.0.2-Linux.tar.gz.REMOVED.git-id  DBGWAS-0.0.3-Linux.tar.gz.REMOVED.git-id  DBGWAS-0.3.0-Linux.tar.gz.REMOVED.git-id  DBGWAS-0.3.2-Linux.tar.gz.REMOVED.git-id
sample_example/: strains
tests/: README  test_DBGWAS_on_pseudomonas_aeruginosa.sh
tools/: CMakeLists.txt
tools/DBGWAS/src/: Blast.cpp  Blast.h  GraphOutput.h  PhenoCounter.cpp  PhenoCounter.h  Utils.cpp  Utils.h  build_dbg.cpp  build_dbg.hpp  compareNeg2Pos.cpp  compareNeg2Pos.h  generate_output.cpp  generate_output.h  global.cpp  global.h  main.cpp  map_reads.cpp  map_reads.hpp  statistical_test.cpp  statistical_test.h
